# djangorestframework-ratelimit

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  test_settings.py  tox.ini
.github/actions/test/: action.yml
django_ratelimit/: core.py  tests.py
