[project]
name = "djangorestframework-ratelimit"
version = "1.0.0"
dependencies = ["django >= 3.2"]
authors = [
    {name = "James Socol", email = "me@jamessocol.com"},
    {name = "Ronan Boiteau", email = "ronan@boiteau.eu"},
]
maintainers = [{ name = "Ronan Boiteau", email = "ronan@boiteau.eu" }]
requires-python = ">= 3.7"
license = {file = "LICENSE"}
description = "Cache-based rate-limiting for Django and Django REST Framework"
keywords = ["django", "rest", "framework", "ratelimit", "rate", "limit"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://github.com/ronanboiteau/djangorestframework-ratelimit/blob/main/README.md"
Repository = "https://github.com/ronanboiteau/djangorestframework-ratelimit.git"
Issues = "https://github.com/ronanboiteau/djangorestframework-ratelimit/issues"
Changelog = "https://github.com/ronanboiteau/djangorestframework-ratelimit/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
